// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-14080.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
'use strict' /* comment */;

function foo() {
  'use strict' /* comment */;
}

=====================================output=====================================
"use strict" /* comment */

function foo() {
  "use strict" /* comment */
}

================================================================================
`;

exports[`issue-14080.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'use strict' /* comment */;

function foo() {
  'use strict' /* comment */;
}

=====================================output=====================================
"use strict" /* comment */;

function foo() {
  "use strict" /* comment */;
}

================================================================================
`;

exports[`issue-14080-1.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
'use strict';

/* comment */
[].forEach();

function foo() {
  'use strict';

  /* comment */
  [].forEach();
}

=====================================output=====================================
"use strict"

/* comment */
;[].forEach()

function foo() {
  "use strict"

  /* comment */
  ;[].forEach()
}

================================================================================
`;

exports[`issue-14080-1.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
'use strict';

/* comment */
[].forEach();

function foo() {
  'use strict';

  /* comment */
  [].forEach();
}

=====================================output=====================================
"use strict";

/* comment */
[].forEach();

function foo() {
  "use strict";

  /* comment */
  [].forEach();
}

================================================================================
`;
